--- a/streamer/pom.xml
+++ b/streamer/pom.xml
@@ -20,7 +20,16 @@
 
 
     <dependencies>
+
+
         <!--Tests deps-->
+        <dependency>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest_${scala.version}</artifactId>
+            <version>3.0.5</version>
+            <scope>compile</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
