--- a/web/pom.xml
+++ b/web/pom.xml
@@ -30,7 +30,7 @@
             <version>1.3-SNAPSHOT</version>
         </dependency>
 
-        <!--<dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
              <exclusions>
@@ -39,7 +39,7 @@
                     <artifactId>spring-boot-starter-logging</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>-->
+        </dependency>
 
         <dependency>
             <groupId>io.micrometer</groupId>
