--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,14 +15,14 @@ jobs:
                   id: vars
                   run: echo ::set-output name=tag::$(echo ${GITHUB_REF:10})
                 - name: Build the tagged Web image
-                  run: docker build web --file Dockerfile --tag diptan/web:${{steps.vars.outputs.tag}}
+                  run: docker build web --file web/Dockerfile --tag diptan/web:${{steps.vars.outputs.tag}}
                 - name: Push the tagged Web image
                   run: docker push diptan/web:${{steps.vars.outputs.tag}}
                 - name: Build the latest Trainer image
-                  run: docker build trainer --file Dockerfile --tag diptan/trainer:latest
+                  run: docker build trainer --file trainer/Dockerfile --tag diptan/trainer:latest
                 - name: Push the latest TRainer image
                   run: docker push diptan/trainer:latest
                 - name: Build the latest Streamer image
-                  run: docker build streamer --file Dockerfile --tag diptan/streamer:latest
+                  run: docker build streamer --file streamer/Dockerfile --tag diptan/streamer:latest
                 - name: Push the latest Streamer image
                   run: docker push diptan/streamer:latest
