--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,3 +28,18 @@ jobs:
         restore-keys: ${{ runner.os }}-m2
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Upload web artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: web
+        path: web/target/web*
+    - name: Upload trainer artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: trainer
+        path: trainer/target/dist/
+    - name: Upload streaming artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: streamer
+        path: streamer/target/streamer/dist
