--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,6 +14,21 @@ jobs:
                 - name: Get the version
                   id: vars
                   run: echo ::set-output name=tag::$(echo ${GITHUB_REF:10})
+                - name: Upload web artifact
+                - uses: actions/upload-artifact@v2
+                  with:
+                   name: web
+                   path: web/target/web*
+                - name: Upload trainer artifact
+                - uses: actions/upload-artifact@v2
+                  with:
+                   name: trainer
+                   path: trainer/target/dist/
+                - name: Upload streaming artifact
+                - uses: actions/upload-artifact@v2
+                  with:
+                    name: streamer
+                    path: streamer/target/dist
                 - name: Build the tagged Web image
                   run: docker build web --file web/Dockerfile --tag diptan/web:${{steps.vars.outputs.tag}}
                 - name: Push the tagged Web image
