--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -30,14 +30,14 @@ jobs:
                     name: streamer
                     path: streamer/target/dist
                 - name: Build the tagged Web image
-                  run: docker build web --file web/Dockerfile --tag diptan/web:${{steps.vars.outputs.tag}}
+                  run: docker build web --file web/DockerfileAction --tag diptan/web:${{steps.vars.outputs.tag}}
                 - name: Push the tagged Web image
                   run: docker push diptan/web:${{steps.vars.outputs.tag}}
                 - name: Build the latest Trainer image
-                  run: docker build trainer --file trainer/Dockerfile --tag diptan/trainer:latest
+                  run: docker build trainer --file trainer/DockerfileAction --tag diptan/trainer:latest
                 - name: Push the latest TRainer image
                   run: docker push diptan/trainer:latest
                 - name: Build the latest Streamer image
-                  run: docker build streamer --file streamer/Dockerfile --tag diptan/streamer:latest
+                  run: docker build streamer --file streamer/DockerfileAction --tag diptan/streamer:latest
                 - name: Push the latest Streamer image
                   run: docker push diptan/streamer:latest
