--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,14 +20,17 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
+      
     - name: Cache Maven packages
       uses: actions/cache@v2
       with:
         path: ~/.m2
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      
     - name: Upload web artifact
       uses: actions/upload-artifact@v2
       with:
@@ -48,6 +51,12 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+         java-version: 1.8
+       
       - name: Login to DockerHub Registr
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       
