--- a/streamer/pom.xml
+++ b/streamer/pom.xml
@@ -53,7 +53,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>20.0</version>
+            <version>28.2-android</version>
         </dependency>
 
         <dependency>
