--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -64,7 +64,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
          name: web
-         path: ~/
+         path: web/target/
       - name: checking files
         run: ls
       - name: Build the tagged Web image
