--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -64,9 +64,9 @@ jobs:
         uses: actions/download-artifact@v2
         with:
          name: web
-         path: web/target/
+         path: dist
       - name: checking files
-        run: ls
+        run: ls dist
       - name: Build the tagged Web image
         run: docker build web --file web/DockerfileAction --tag diptan/web:latest
       - name: Push the tagged Web image
