--- a/web/DockerfileAction
+++ b/web/DockerfileAction
@@ -1,4 +1,5 @@
 FROM openjdk:8-jre-slim
+WORKDIR ~/
 COPY /dist/web-1.4-SNAPSHOT.jar app.jar
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
 EXPOSE 8080
