--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -69,6 +69,7 @@ jobs:
         run: ls dist
       - name: Build the tagged Web image
         run: docker build web --file web/DockerfileAction --tag diptan/web:latest
+        working-directory: ./dist
       - name: Push the tagged Web image
         run: docker push diptan/web:latest
         
