--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -57,38 +57,58 @@ jobs:
         with:
          java-version: 1.8
        
-      - name: Login to DockerHub Registr
-        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+#       - name: Login to DockerHub Registr
+#         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       
       - name: Download web artifact
         uses: actions/download-artifact@v2
         with:
          name: web
-         path: dist
+         path: web/target/dist
       - name: checking files
-        run: ls dist
-      - name: Build the tagged Web image
-        run: docker build web --file web/DockerfileAction --tag diptan/web:latest
-        working-directory: ./dist
-      - name: Push the tagged Web image
-        run: docker push diptan/web:latest
+        run: ls web/target/dist
+#       - name: Build the tagged Web image
+#         run: docker build web --file web/DockerfileAction --tag diptan/web:latest
+#         working-directory: ./dist
+#       - name: Push the tagged Web image
+#         run: docker push diptan/web:latest
         
-      - name: Download trainer artifact
-        uses: actions/download-artifact@v2
-        with:
-         name: trainer
-         path: /
-      - name: Build the latest Trainer image
-        run: docker build trainer --file trainer/DockerfileAction --tag diptan/trainer:latest
-      - name: Push the latest TRainer image
-        run: docker push diptan/trainer:latest
+#       - name: Download trainer artifact
+#         uses: actions/download-artifact@v2
+#         with:
+#          name: trainer
+#          path: /
+#       - name: Build the latest Trainer image
+#         run: docker build trainer --file trainer/DockerfileAction --tag diptan/trainer:latest
+#       - name: Push the latest TRainer image
+#         run: docker push diptan/trainer:latest
 
-      - name: Download streaming artifact
-        uses: actions/download-artifact@v2
+#       - name: Download streaming artifact
+#         uses: actions/download-artifact@v2
+#         with:
+#           name: streamer
+#           path: /
+#       - name: Build the latest Streamer image
+#         run: docker build streamer --file streamer/DockerfileAction --tag diptan/streamer:latest
+#       - name: Push the latest Streamer image
+#         run: docker push diptan/streamer:latest
+        
+      - name: Build and push Docker images
+        # You may pin to the exact commit or the version.
+        # uses: docker/build-push-action@ab83648e2e224cfeeab899e23b639660765c3a89
+        uses: docker/build-push-action@v1.1.1
         with:
-          name: streamer
-          path: /
-      - name: Build the latest Streamer image
-        run: docker build streamer --file streamer/DockerfileAction --tag diptan/streamer:latest
-      - name: Push the latest Streamer image
-        run: docker push diptan/streamer:latest
+          # Username used to log in to a Docker registry. If not set then no login will occur
+          username: diptan
+          # Password or personal access token used to log in to a Docker registry. If not set then no login will occur
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          # Server address of Docker registry. If not set then will default to Docker Hub
+          registry: diptan
+          # Docker repository to tag the image with
+          repository: web
+          # Comma-delimited list of tags. These will be added to the registry/repository to form the image's tags
+          path: web
+          # Path to the Dockerfile (Default is '{path}/Dockerfile')
+          dockerfile: Dockerfile
+          # Sets the target stage to build
+
