--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -102,10 +102,10 @@ jobs:
           username: diptan
           # Password or personal access token used to log in to a Docker registry. If not set then no login will occur
           password: ${{ secrets.DOCKER_PASSWORD }}
-          # Server address of Docker registry. If not set then will default to Docker Hub
-          registry: diptan
+          tags: diptan/web:latest
+           #  Automatically tags the built image with the git reference as per the readme
           # Docker repository to tag the image with
-          repository: web
+#           repository: web
           # Comma-delimited list of tags. These will be added to the registry/repository to form the image's tags
           path: web
           # Path to the Dockerfile (Default is '{path}/Dockerfile')
