--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,16 +36,16 @@ jobs:
       with:
         name: web
         path: web/target/web*
-#     - name: Upload trainer artifact
-#       uses: actions/upload-artifact@v2
-#       with:
-#         name: trainer
-#         path: trainer/target/dist/
-#     - name: Upload streaming artifact
-#       uses: actions/upload-artifact@v2
-#       with:
-#         name: streamer
-#         path: streamer/target/dist
+    - name: Upload trainer artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: trainer
+        path: trainer/target/dist/
+    - name: Upload streaming artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: streamer
+        path: streamer/target/dist
         
   deploy:  
     needs: build
